# rbfmt

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: test.yml
scripts/: check_output_syntax.sh  meaning_autogen.rb
src/: cli.rs  config.rs  error.rs  fmt.rs  lib.rs  main.rs  meaning.rs  parse.rs  test.rs
src/fmt/: node.rs  output.rs  shape.rs  trivia.rs
src/meaning/: autogen.rs
src/parse/: arrays.rs  assigns.rs  atoms.rs  begins.rs  blocks.rs  calls.rs  cases.rs  classes.rs  consts.rs  elses.rs  hashes.rs  ifs.rs  loops.rs  method_calls.rs  method_defs.rs  miscs.rs  pattern_matches.rs  postmodifiers.rs  ranges.rs  regexps.rs  src.rs  statements.rs  strings.rs  symbols.rs  trivia.rs
tests/0_only_trivia/: in.rb
tests/0_syntax/: in.rb  out.rb
tests/array/: in.rb  out.rb
tests/assignments/: in.rb  out.rb
tests/begin/: in.rb  out.rb
tests/case/: in.rb  out.rb
tests/class/: in.rb  out.rb
tests/comments/: in.rb  out.rb
tests/constants/: in.rb  out.rb
tests/decors/: in.rb  out.rb
tests/def/: in.rb  out.rb
tests/for/: in.rb  out.rb
tests/hash/: in.rb  out.rb
tests/heredocs/: in.rb  out.rb
tests/if/: in.rb  out.rb
tests/if_ternary/: in.rb  out.rb
tests/infix/: in.rb  out.rb
tests/lambda/: in.rb  out.rb
tests/method_call_with_blocks/: in.rb  out.rb
tests/method_calls/: in.rb  out.rb
tests/method_index_calls/: in.rb  out.rb
tests/misc/: in.rb  out.rb
tests/module/: in.rb  out.rb
tests/nil_bool/: out.rb
tests/not/: in.rb  out.rb
tests/numbers/: in.rb
tests/parens/: in.rb  out.rb
tests/pattern_match/: in.rb  (+1 more)
(+53 files in other folders)
