[package]
authors = ["ryym <ryym.64@gmail.com>"]
description = "Ruby code formatter"
edition = "2021"
keywords = ["ruby", "formatter"]
license = "MIT"
name = "rbfmt"
repository = "https://github.com/ryym/rbfmt"
version = "0.0.1"

[dependencies]
getopts = "0.2.21"
prism = { package = "ruby-prism", version = "0.24.0" }

[dev-dependencies]
similar-asserts = "1.5.0"
