[package]
authors = ["ryym <ryym.64@gmail.com>"]
description = "Ruby code formatter"
edition = "2021"
keywords = ["ruby", "formatter"]
license = "MIT"
name = "rbfmt"
repository = "https://github.com/ryym/rbfmt"
version = "0.0.2"

[dependencies]
getopts = "0.2.21"
prism = { version = "0.24.0", package = "ruby-prism" }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"

[dev-dependencies]
similar-asserts = "1.5.0"
