[package]
authors = ["ryym <ryym.64@gmail.com>"]
description = "Ruby code formatter"
edition = "2021"
keywords = ["ruby", "formatter"]
license = "MIT"
name = "rbfmt"
repository = "https://github.com/ryym/rbfmt"
version = "0.0.2"

[features]
default = []
safety = []

[dependencies]
anyhow = "1.0.83"
env_logger = "0.11.3"
getopts = "0.2.21"
log = "0.4.21"
prism = { version = "0.24.0", package = "ruby-prism" }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"

[dev-dependencies]
similar-asserts = "1.5.0"
